<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.kafka.teste.appempresadeconsultoria.ui.principal.PrincipalFragment"
        android:label="@string/menu_principal"
        tools:layout="@layout/fragment_principal" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.kafka.teste.appempresadeconsultoria.ui.servico.ServicoFragment"
        android:label="@string/menu_servico"
        tools:layout="@layout/fragment_servico" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.kafka.teste.appempresadeconsultoria.ui.cliente.ClienteshowFragment"
        android:label="@string/menu_clientes"
        tools:layout="@layout/fragment_clientes" />


    <fragment
        android:id="@+id/nav_share"
        android:name="com.kafka.teste.appempresadeconsultoria.ui.contato.ContatoFragment"
        android:label="@string/menu_contato"
        tools:layout="@layout/fragment_contato" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.kafka.teste.appempresadeconsultoria.ui.sobre.SobreFragment"
        android:label="@string/menu_sobre"
        tools:layout="@layout/fragment_sobre" />
</navigation>